# reflection

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  handwritten_single_reply_main.cpp  protobuf_single_reply_main.cpp  templated_main.hpp  yajl_single_reply_main.cpp  yreflection_chunked_reply_main.cpp  yreflection_single_reply_main.cpp
app/detail/: request_handler.hpp  request_handler.ipp
app/message_handlers/: chunked_reply_formatter.hpp  reply_collector.hpp
app/request_handlers/: single_reply.hpp  single_reply.ipp  yreflection_single_reply.cpp  yreflection_single_reply.hpp  yreflection_single_reply.ipp
http/: CMakeLists.txt  README.md
http/client/: CMakeLists.txt  async_client.cpp  stats.h
http/server/: CMakeLists.txt  chunked_connection.hpp  chunked_connection.ipp  connection.cpp  connection.hpp  connection.ipp  connection_manager.cpp  connection_manager.hpp  connection_manager.ipp  header.hpp  main.cpp  mime_types.cpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  server.ipp
model/: CMakeLists.txt  README.md
model/data/: README.md  email.h  mailbox.h  message.h  recipient.h
model/protobuf/: CMakeLists.txt  model.pb.h  model.proto
model/reflection/: email.h  message.h  recipient.h
reflection/: CMakeLists.txt  README.md
reflection/include/yamail/data/: reflection.h
reflection/include/yamail/data/common/: json_to_ptree.h
reflection/include/yamail/data/deserialization/: bson_reader.h  json_reader.h  ptree.h  ptree_reader.h  xml_reader.h  yajl.h
reflection/include/yamail/data/reflection/: ptree_reflection.h  reflection.h  sax.h  tag.h  visitor.h
reflection/include/yamail/data/reflection/details/: adt.h  apply_visitor.h  fusion.h  mpl.h  type_traits.h  types.h
reflection/include/yamail/data/reflection/details/types/: map.h  optional.h  pair.h  pod.h  sequence.h  smart_ptr.h  struct.h  tuple.h
reflection/include/yamail/data/serialization/: json_writer.h  libxml.h  ptree.h  ptree_writer.h  xml_writer.h  yajl.h
reflection/share/: CMakeLists.txt  FindYREFLECTION.cmake  find_yreflection_dependencies.cmake
reflection/tests/: CMakeLists.txt  common_test.cc  getter_setter_test.cc  json_reader_test.cc  json_to_ptree_test.cc  ptree_reader_test.cc  ptree_reflection_test.cc  smart_ptr_test.cc  test_main.cc
